<resources>
    <string name="app_name">DSC Kibu</string>
    <string name="title_android">Android</string>
    <string name="title_web">Web</string>
    <string name="title_hacking">Hacking</string>
    <string name="title_ml">Ml</string>
    <string name="title_ui">Ui</string>

    <string name="android_meet">Android</string>
    <string name="web_meet">Web</string>
    <string name="ml">Ml</string>
    <string name="hacking">Hacking</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="report_issue">Report Issue</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="need_an_account">Need an account?</string>
</resources>
