<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.dsc.kibu.ui.onboard.viewmodel.OnBoardViewModel" />
    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".ui.onboard.fragment.Login">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:src="@drawable/dsc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="12dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/login_name"
                style="@style/authTextInputEditTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/layout_border"
                android:drawablePadding="@dimen/margin_normal"
                android:hint="@string/enter_email"
                android:text="@={viewmodel.email}"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="12dp"
                android:textStyle="normal" />


            <EditText
                android:id="@+id/login_password"
                style="@style/authTextInputEditTextPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/layout_border"
                android:drawablePadding="@dimen/margin_normal"
                android:hint="@string/enter_password"
                android:text="@={viewmodel.password}"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="12dp" />


            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/login_btn"
                android:onClick="@{viewmodel::login}"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/need_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="@{viewmodel::goToRegister}"
                android:text="@string/need_an_account" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/need"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:onClick="@{viewmodel::forgotPass}"
                android:padding="36dp"
                android:text="@string/forgot_password" />


            <TextView
                android:id="@+id/need2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:onClick="@{viewmodel::reportIssue}"
                android:padding="36dp"
                android:text="@string/report_issue" />
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
